--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>News</title>
+  <title>NewsCase</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="assets/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="assets/fontAwesome.css">
+  <link rel="stylesheet" href="assets/hero-slider.css">
+  <link rel="stylesheet" href="assets/owl-carousel.css">
+  <link rel="stylesheet" href="assets/style.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
   <app-root></app-root>
