--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,16 @@
   <link rel="stylesheet" href="assets/bootstrap-theme.min.css">
   <link rel="stylesheet" href="assets/fontAwesome.css">
   <link rel="stylesheet" href="assets/hero-slider.css">
-  <link rel="stylesheet" href="assets/owl-carousel.css">
-  <link rel="stylesheet" href="assets/style.css">
+  
+  
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 
 
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
