--- a/src/index.html
+++ b/src/index.html
@@ -2,28 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NewsCase</title>
+  <title>eBui angular project</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="stylesheet" href="assets/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="assets/fontAwesome.css">
-  <link rel="stylesheet" href="assets/hero-slider.css">
-  
-  
-
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-
-
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="mat-typography">
+<body>
   <app-root></app-root>
 </body>
 </html>
